xwcps-mars-engine/target/generated-sources/antlr4/gr/cite/earthserver/xwcpsmars/grammar/gr/cite/earthserver/xwcpsmars/grammar/XPathParser.java
// Generated from gr/cite/earthserver/xwcpsmars/grammar/XPath.g4 by ANTLR 4.7
package gr.cite.earthserver.xwcpsmars.grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class XPathParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, FOR=4, ABSOLUTE_VALUE=5, ADD=6, ALL=7, AND=8, 
		ARCSIN=9, ARCCOS=10, ARCTAN=11, AVG=12, BIT=13, CASE=14, COLON=15, COMMA=16, 
		CONDENSE=17, COS=18, COSH=19, COUNT=20, COVERAGE=21, COVERAGE_VARIABLE_NAME_PREFIX=22, 
		CRS_TRANSFORM=23, DECODE=24, DEFAULT=25, DESCRIBE_COVERAGE=26, DIVISION=27, 
		DOT=28, DOTDOT=29, ENCODE=30, EQUAL=31, EXP=32, EXTEND=33, FALSE=34, GREATER_THAN=35, 
		GREATER_OR_EQUAL_THAN=36, IMAGINARY_PART=37, IDENTIFIER=38, CRSSET=39, 
		IMAGECRSDOMAIN=40, IMAGECRS=41, DOMAIN=42, IN=43, LEFT_BRACE=44, LEFT_BRACKET=45, 
		LEFT_PARENTHESIS=46, LN=47, LIST=48, LOG=49, LOWER_THAN=50, LOWER_OR_EQUAL_THAN=51, 
		MAX=52, MIN=53, MINUS=54, MULTIPLICATION=55, NOT=56, NOT_EQUAL=57, NAN_NUMBER_CONSTANT=58, 
		OR=59, OVER=60, OVERLAY=61, QUOTE=62, ESCAPED_QUOTE=63, PLUS=64, POWER=65, 
		REAL_PART=66, ROUND=67, RETURN=68, RIGHT_BRACE=69, RIGHT_BRACKET=70, RIGHT_PARENTHESIS=71, 
		SCALE=72, SEMICOLON=73, SIN=74, SINH=75, SLICE=76, SOME=77, SQUARE_ROOT=78, 
		STRUCT=79, SWITCH=80, TAN=81, TANH=82, TRIM=83, TRUE=84, USING=85, VALUE=86, 
		VALUES=87, WHERE=88, XOR=89, REAL_NUMBER_CONSTANT=90, SCIENTIFIC_NUMBER_CONSTANT=91, 
		COVERAGE_VARIABLE_NAME=92, NAME=93, FORMAT_NAME=94, STRING_LITERAL=95, 
		EXTRA_PARAMS=96, WS=97, AxisNameXpath=98, NodeType=99, NCName=100, IMGCRSDOMAIN=101, 
		SIMPLE_IDENTIFIER=102, SIMPLE_IDENTIFIER_WITH_NUMBERS=103, DIV=104, METADATA=105, 
		MOD=106, ASC=107, AT=108, DESC=109, DOUBLE_COLON=110, GREATER_THAN_SLASH=111, 
		ID=112, LET=113, LOWER_THAN_SLASH=114, MIXED=115, ORDERBY=116, WRAP_RESULT=117, 
		XPATH_LITERAL=118;
	public static final int
		RULE_main = 0, RULE_locationPath = 1, RULE_absoluteLocationPathNoroot = 2, 
		RULE_relativeLocationPath = 3, RULE_step = 4, RULE_axisSpecifier = 5, 
		RULE_nodeTest = 6, RULE_predicate = 7, RULE_abbreviatedStep = 8, RULE_expr = 9, 
		RULE_primaryExpr = 10, RULE_functionCall = 11, RULE_unionExprNoRoot = 12, 
		RULE_pathExprNoRoot = 13, RULE_filterExpr = 14, RULE_orExpr = 15, RULE_andExpr = 16, 
		RULE_equalityExpr = 17, RULE_relationalExpr = 18, RULE_additiveExpr = 19, 
		RULE_multiplicativeExpr = 20, RULE_unaryExprNoRoot = 21, RULE_qName = 22, 
		RULE_functionName = 23, RULE_variableReference = 24, RULE_nameTest = 25, 
		RULE_nCName = 26, RULE_wcpsHotWords = 27;
	public static final String[] ruleNames = {
		"main", "locationPath", "absoluteLocationPathNoroot", "relativeLocationPath", 
		"step", "axisSpecifier", "nodeTest", "predicate", "abbreviatedStep", "expr", 
		"primaryExpr", "functionCall", "unionExprNoRoot", "pathExprNoRoot", "filterExpr", 
		"orExpr", "andExpr", "equalityExpr", "relationalExpr", "additiveExpr", 
		"multiplicativeExpr", "unaryExprNoRoot", "qName", "functionName", "variableReference", 
		"nameTest", "nCName", "wcpsHotWords"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'//'", "'processing-instruction'", "'|'", null, null, null, null, 
		null, null, null, null, null, null, null, "':'", "','", null, null, null, 
		null, null, "'$'", null, null, null, null, "'/'", "'.'", null, null, "'='", 
		null, null, null, "'>'", "'>='", null, null, null, null, null, null, null, 
		"'{'", "'['", "'('", null, null, null, "'<'", "'<='", null, null, "'-'", 
		"'*'", null, "'!='", null, null, null, null, "'\"'", "'\\\"'", "'+'", 
		null, null, null, null, "'}'", "']'", "')'", null, "';'", null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, "'@'", null, "'::'", "'/>'", 
		null, null, "'</'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, "FOR", "ABSOLUTE_VALUE", "ADD", "ALL", "AND", 
		"ARCSIN", "ARCCOS", "ARCTAN", "AVG", "BIT", "CASE", "COLON", "COMMA", 
		"CONDENSE", "COS", "COSH", "COUNT", "COVERAGE", "COVERAGE_VARIABLE_NAME_PREFIX", 
		"CRS_TRANSFORM", "DECODE", "DEFAULT", "DESCRIBE_COVERAGE", "DIVISION", 
		"DOT", "DOTDOT", "ENCODE", "EQUAL", "EXP", "EXTEND", "FALSE", "GREATER_THAN", 
		"GREATER_OR_EQUAL_THAN", "IMAGINARY_PART", "IDENTIFIER", "CRSSET", "IMAGECRSDOMAIN", 
		"IMAGECRS", "DOMAIN", "IN", "LEFT_BRACE", "LEFT_BRACKET", "LEFT_PARENTHESIS", 
		"LN", "LIST", "LOG", "LOWER_THAN", "LOWER_OR_EQUAL_THAN", "MAX", "MIN", 
		"MINUS", "MULTIPLICATION", "NOT", "NOT_EQUAL", "NAN_NUMBER_CONSTANT", 
		"OR", "OVER", "OVERLAY", "QUOTE", "ESCAPED_QUOTE", "PLUS", "POWER", "REAL_PART", 
		"ROUND", "RETURN", "RIGHT_BRACE", "RIGHT_BRACKET", "RIGHT_PARENTHESIS", 
		"SCALE", "SEMICOLON", "SIN", "SINH", "SLICE", "SOME", "SQUARE_ROOT", "STRUCT", 
		"SWITCH", "TAN", "TANH", "TRIM", "TRUE", "USING", "VALUE", "VALUES", "WHERE", 
		"XOR", "REAL_NUMBER_CONSTANT", "SCIENTIFIC_NUMBER_CONSTANT", "COVERAGE_VARIABLE_NAME", 
		"NAME", "FORMAT_NAME", "STRING_LITERAL", "EXTRA_PARAMS", "WS", "AxisNameXpath", 
		"NodeType", "NCName", "IMGCRSDOMAIN", "SIMPLE_IDENTIFIER", "SIMPLE_IDENTIFIER_WITH_NUMBERS", 
		"DIV", "METADATA", "MOD", "ASC", "AT", "DESC", "DOUBLE_COLON", "GREATER_THAN_SLASH", 
		"ID", "LET", "LOWER_THAN_SLASH", "MIXED", "ORDERBY", "WRAP_RESULT", "XPATH_LITERAL"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "XPath.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public XPathParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class MainContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XPathListener ) ((XPathListener)listener).enterMain(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XPathListener ) ((XPathListener)listener).exitMain(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XPathVisitor ) return ((XPathVisitor<? extends T>)visitor).visitMain(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_main);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			expr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LocationPathContext extends ParserRuleContext {
		public RelativeLocationPathContext relativeLocationPath() {
			return getRuleContext(RelativeLocationPathContext.class,0);
		}
		public AbsoluteLocationPathNorootContext absoluteLocationPathNoroot() {
			return getRuleContext(AbsoluteLocationPathNorootContext.class,0);
		}
		public LocationPathContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_locationPath; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XPathListener ) ((XPathListener)listener).enterLocationPath(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XPathListener ) ((XPathListener)listener).exitLocationPath(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XPathVisitor ) return ((XPathVisitor<? extends T>)visitor).visitLocationPath(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LocationPathContext locationPath() throws RecognitionException {
		LocationPathContext _localctx = new LocationPathContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_locationPath);
		try {
			setState(60);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__1:
			case FOR:
			case ABSOLUTE_VALUE:
			case ADD:
			case ALL:
			case AND:
			case ARCSIN:
			case ARCCOS:
			case ARCTAN:
			case AVG:
			case BIT:
			case CONDENSE:
			case COS:
			case COSH:
			case COUNT:
			case COVERAGE:
			case CRS_TRANSFORM:
			case DECODE:
			case DESCRIBE_COVERAGE:
			case DOT:
			case DOTDOT:
			case ENCODE:
			case EXP:
			case EXTEND:
			case FALSE:
			case IMAGINARY_PART:
			case IN:
			case LN:
			case LIST:
			case LOG:
			case MAX:
			case MIN:
			case MULTIPLICATION:
			case NOT:
			case OR:
			case OVER:
			case OVERLAY:
			case POWER:
			case REAL_PART:
			case ROUND:
			case RETURN:
			case SCALE:
			case SIN:
			case SINH:
			case SLICE:
			case SOME:
			case SQUARE_ROOT:
			case STRUCT:
			case TAN:
			case TANH:
			case TRIM:
			case TRUE:
			case USING:
			case VALUE:
			case VALUES:
			case WHERE:
			case XOR:
			case AxisNameXpath:
			case NodeType:
			case NCName:
			case IMGCRSDOMAIN:
			case SIMPLE_IDENTIFIER:
			case SIMPLE_IDENTIFIER_WITH_NUMBERS:
			case DIV:
			case METADATA:
			case MOD:
			case AT:
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(58);
				relativeLocationPath();
				}
				break;
			case T__0:
			case DIVISION:
				enterOuterAlt(_localctx, 2);
				{
				setState(59);
				absoluteLocationPathNoroot();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AbsoluteLocationPathNorootContext extends ParserRuleContext {
		public RelativeLocationPathContext relativeLocationPath() {
			return getRuleContext(RelativeLocationPathContext.class,0);
		}
		public AbsoluteLocationPathNorootContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_absoluteLocationPathNoroot; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XPathListener ) ((XPathListener)listener).enterAbsoluteLocationPathNoroot(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XPathListener ) ((XPathListener)listener).exitAbsoluteLocationPathNoroot(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XPathVisitor ) return ((XPathVisitor<? extends T>)visitor).visitAbsoluteLocationPathNoroot(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AbsoluteLocationPathNorootContext absoluteLocationPathNoroot() throws RecognitionException {
		AbsoluteLocationPathNorootContext _localctx = new AbsoluteLocationPathNorootContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_absoluteLocationPathNoroot);
		try {
			setState(66);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DIVISION:
				enterOuterAlt(_localctx, 1);
				{
				setState(62);
				match(DIVISION);
				setState(63);
				relativeLocationPath();
				}
				break;
			case T__0:
				enterOuterAlt(_localctx, 2);
				{
				setState(64);
				match(T__0);
				setState(65);
				relativeLocationPath();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RelativeLocationPathContext extends ParserRuleContext {
		public List<StepContext> step() {
			return getRuleContexts(StepContext.class);
		}
		public StepContext step(int i) {
			return getRuleContext(StepContext.class,i);
		}
		public RelativeLocationPathContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_relativeLocationPath; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XPathListener ) ((XPathListener)listener).enterRelativeLocationPath(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XPathListener ) ((XPathListener)listener).exitRelativeLocationPath(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XPathVisitor ) return ((XPathVisitor<? extends T>)visitor).visitRelativeLocationPath(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RelativeLocationPathContext relativeLocationPath() throws RecognitionException {
		RelativeLocationPathContext _localctx = new RelativeLocationPathContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_relativeLocationPath);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			step();
			setState(73);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0 || _la==DIVISION) {
				{
				{
				setState(69);
				_la = _input.LA(1);
				if ( !(_la==T__0 || _la==DIVISION) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(70);
				step();
				}
				}
				setState(75);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StepContext extends ParserRuleContext {
		public AxisSpecifierContext axisSpecifier() {
			return getRuleContext(AxisSpecifierContext.class,0);
		}
		public NodeTestContext nodeTest() {
			return getRuleContext(NodeTestContext.class,0);
		}
		public List<PredicateContext> predicate() {
			return getRuleContexts(PredicateContext.class);
		}
		public PredicateContext predicate(int i) {
			return getRuleContext(PredicateContext.class,i);
		}
		public AbbreviatedStepContext abbreviatedStep() {
			return getRuleContext(AbbreviatedStepContext.class,0);
		}
		public StepContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_step; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XPathListener ) ((XPathListener)listener).enterStep(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XPathListener ) ((XPathListener)listener).exitStep(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XPathVisitor ) return ((XPathVisitor<? extends T>)visitor).visitStep(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StepContext step() throws RecognitionException {
		StepContext _localctx = new StepContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_step);
		int _la;
		try {
			setState(85);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__1:
			case FOR:
			case ABSOLUTE_VALUE:
			case ADD:
			case ALL:
			case AND:
			case ARCSIN:
			case ARCCOS:
			case ARCTAN:
			case AVG:
			case BIT:
			case CONDENSE:
			case COS:
			case COSH:
			case COUNT:
			case COVERAGE:
			case CRS_TRANSFORM:
			case DECODE:
			case DESCRIBE_COVERAGE:
			case ENCODE:
			case EXP:
			case EXTEND:
			case FALSE:
			case IMAGINARY_PART:
			case IN:
			case LN:
			case LIST:
			case LOG:
			case MAX:
			case MIN:
			case MULTIPLICATION:
			case NOT:
			case OR:
			case OVER:
			case OVERLAY:
			case POWER:
			case REAL_PART:
			case ROUND:
			case RETURN:
			case SCALE:
			case SIN:
			case SINH:
			case SLICE:
			case SOME:
			case SQUARE_ROOT:
			case STRUCT:
			case TAN:
			case TANH:
			case TRIM:
			case TRUE:
			case USING:
			case VALUE:
			case VALUES:
			case WHERE:
			case XOR:
			case AxisNameXpath:
			case NodeType:
			case NCName:
			case IMGCRSDOMAIN:
			case SIMPLE_IDENTIFIER:
			case SIMPLE_IDENTIFIER_WITH_NUMBERS:
			case DIV:
			case METADATA:
			case MOD:
			case AT:
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(76);
				axisSpecifier();
				setState(77);
				nodeTest();
				setState(81);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==LEFT_BRACKET) {
					{
					{
					setState(78);
					predicate();
					}
					}
					setState(83);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case DOT:
			case DOTDOT:
				enterOuterAlt(_localctx, 2);
				{
				setState(84);
				abbreviatedStep();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AxisSpecifierContext extends ParserRuleContext {
		public TerminalNode AxisNameXpath() { return getToken(XPathParser.AxisNameXpath, 0); }
		public AxisSpecifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_axisSpecifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XPathListener ) ((XPathListener)listener).enterAxisSpecifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XPathListener ) ((XPathListener)listener).exitAxisSpecifier(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XPathVisitor ) return ((XPathVisitor<? extends T>)visitor).visitAxisSpecifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AxisSpecifierContext axisSpecifier() throws RecognitionException {
		AxisSpecifierContext _localctx = new AxisSpecifierContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_axisSpecifier);
		int _la;
		try {
			setState(92);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(87);
				match(AxisNameXpath);
				setState(88);
				match(DOUBLE_COLON);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(90);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==AT) {
					{
					setState(89);
					match(AT);
					}
				}

				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NodeTestContext extends ParserRuleContext {
		public NameTestContext nameTest() {
			return getRuleContext(NameTestContext.class,0);
		}
		public TerminalNode NodeType() { return getToken(XPathParser.NodeType, 0); }
		public TerminalNode LEFT_PARENTHESIS() { return getToken(XPathParser.LEFT_PARENTHESIS, 0); }
		public TerminalNode RIGHT_PARENTHESIS() { return getToken(XPathParser.RIGHT_PARENTHESIS, 0); }
		public TerminalNode XPATH_LITERAL() { return getToken(XPathParser.XPATH_LITERAL, 0); }
		public TerminalNode STRING_LITERAL() { return getToken(XPathParser.STRING_LITERAL, 0); }
		public NodeTestContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nodeTest; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XPathListener ) ((XPathListener)listener).enterNodeTest(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XPathListener ) ((XPathListener)listener).exitNodeTest(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XPathVisitor ) return ((XPathVisitor<? extends T>)visitor).visitNodeTest(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NodeTestContext nodeTest() throws RecognitionException {
		NodeTestContext _localctx = new NodeTestContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_nodeTest);
		int _la;
		try {
			setState(102);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case FOR:
			case ABSOLUTE_VALUE:
			case ADD:
			case ALL:
			case AND:
			case ARCSIN:
			case ARCCOS:
			case ARCTAN:
			case AVG:
			case BIT:
			case CONDENSE:
			case COS:
			case COSH:
			case COUNT:
			case COVERAGE:
			case CRS_TRANSFORM:
			case DECODE:
			case DESCRIBE_COVERAGE:
			case ENCODE:
			case EXP:
			case EXTEND:
			case FALSE:
			case IMAGINARY_PART:
			case IN:
			case LN:
			case LIST:
			case LOG:
			case MAX:
			case MIN:
			case MULTIPLICATION:
			case NOT:
			case OR:
			case OVER:
			case OVERLAY:
			case POWER:
			case REAL_PART:
			case ROUND:
			case RETURN:
			case SCALE:
			case SIN:
			case SINH:
			case SLICE:
			case SOME:
			case SQUARE_ROOT:
			case STRUCT:
			case TAN:
			case TANH:
			case TRIM:
			case TRUE:
			case USING:
			case VALUE:
			case VALUES:
			case WHERE:
			case XOR:
			case AxisNameXpath:
			case NCName:
			case IMGCRSDOMAIN:
			case SIMPLE_IDENTIFIER:
			case SIMPLE_IDENTIFIER_WITH_NUMBERS:
			case DIV:
			case METADATA:
			case MOD:
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(94);
				nameTest();
				}
				break;
			case NodeType:
				enterOuterAlt(_localctx, 2);
				{
				setState(95);
				match(NodeType);
				setState(96);
				match(LEFT_PARENTHESIS);
				setState(97);
				match(RIGHT_PARENTHESIS);
				}
				break;
			case T__1:
				enterOuterAlt(_localctx, 3);
				{
				setState(98);
				match(T__1);
				setState(99);
				match(LEFT_PARENTHESIS);
				setState(100);
				_la = _input.LA(1);
				if ( !(_la==STRING_LITERAL || _la==XPATH_LITERAL) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(101);
				match(RIGHT_PARENTHESIS);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PredicateContext extends ParserRuleContext {
		public TerminalNode LEFT_BRACKET() { return getToken(XPathParser.LEFT_BRACKET, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode RIGHT_BRACKET() { return getToken(XPathParser.RIGHT_BRACKET, 0); }
		public PredicateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_predicate; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XPathListener ) ((XPathListener)listener).enterPredicate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XPathListener ) ((XPathListener)listener).exitPredicate(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XPathVisitor ) return ((XPathVisitor<? extends T>)visitor).visitPredicate(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PredicateContext predicate() throws RecognitionException {
		PredicateContext _localctx = new PredicateContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_predicate);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(LEFT_BRACKET);
			setState(105);
			expr();
			setState(106);
			match(RIGHT_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
